--- a/wup_3.Rmd
+++ b/wup_3.Rmd
@@ -35,6 +35,8 @@ basicCN + geom_boxplot()
 basicCN + geom_boxplot(notch=TRUE,outlier.color = "red") + stat_boxplot(geom ='errorbar') + labs(title="Fancy notch boxplot \n with 2 lines")
 ```
 
+This boxplot shows that heavy drinkers mostly sit in the back.
+
 ## Numerical Summarys 
 
 ## Inferential Tests
