--- a/wup_3.Rmd
+++ b/wup_3.Rmd
@@ -14,8 +14,8 @@ require(tidyverse)
 require(tigerstats)
 davisdata <- read.csv(file="UCDavis.csv")
 ```
-## Our Goal is to answer this question Is there a difference between the alcohol consumed between the row
-## you choose to sit in??
+ Our Goal is to answer this question Is there a difference between the alcohol consumed between the row
+you choose to sit in??
 
 ## Now with ggplot - first select the basic data
 
@@ -38,6 +38,12 @@ basicCN + geom_boxplot(notch=TRUE,outlier.color = "red") + stat_boxplot(geom ='e
 This boxplot shows that heavy drinkers mostly sit in the back.
 
 ## Numerical Summarys 
+
+```{r}
+favstats(alcohol~Seat,data=ucdavis1)
+```
+
+The people who sit in the back three times as much alcohol than those who sat in the front or middle seats. 
 
 ## Inferential Tests
 
