--- a/wup_3.Rmd
+++ b/wup_3.Rmd
@@ -47,6 +47,24 @@ The people who sit in the back three times as much alcohol than those who sat in
 
 ## Inferential Tests
 
+# Inferential
+
+```{r}
+model1 <- aov(alcohol~Seat,data=davisdata)
+summary.aov(model1)
+```
+
+The P-Value is so small that it is unlikely that the alchol consumption in all three seats are the same. 
+
+## When significant follow up with TukeyHSD  
+`
+```{r}
+plot(TukeyHSD(model1))
+```
+
+The tukeyHSD plot shows that those who sit in the back drink more than those who sit in the front. It also shows that people in the middle drink less than those in the back. The middle-front shows no evidence of difference in the amount of alcohol consumed. 
+
+
 ## Conclusions
 
-
+The original question was is there a difference between who consumed alcohol based on where a person sat. The evidence shows that people who did consume alchol sat in the back of class. 
